# wTerm

./: .gitignore  50_us.ryanhope.wterm  Makefile  Makefile.inc  Readme.md  app.html  appinfo.json  depends.js  dock.html  excludes.txt  index.html  jail.conf  package.properties  pmPostInstall.script  pmPostInstall.script.release  pmPreRemove.script  setup  setup_appinfo.json  setup_plugin_appinfo.json  terminal.config  terminal.config.default
images/: .directory
roles/: prv.json  pub.json
src/cmatrix/: Makefile  cmatrix  cmatrix.c  config.h
src/css/: depends.js  main.css  mainOld.css  misc.css  pre.css  pre3.css  touchpad.css  vkb.css
src/enyo/: charSelector.js  inputColor.js  main.js  plugin.js  popup2.js  prefs.js  setup.js  utils.js  vkb.js  vkbKey.js  vkbOld.js  vkbsmall.js  wterm.js  wterm_app.js  wterm_dock.js  wterm_firstuse.js  wterm_prefs.js
src/enyo/vkbLayouts/: depends.js  dvorak.js  french.js  german.js  phone_aux.js  (+2 more)
src/models/: prefs.js  sdlk.js  vkblayout.js
src/plugin/: Makefile  Makefile.inc  main.cpp  main_setup.cpp  main_terminal.cpp  setup.c  setup.cpp  terminal.cpp  terminalmain.cpp  wterm.c  wterm.cpp  wterm.hpp
src/vttest/: .vilerc  CHANGES  COPYING  MANIFEST  Makefile  aclocal.m4  charsets.c  color.c  config.h  config.hin  config.status  configure  configure.in  descrip.mms  draw.c  draw.h  esc.c  esc.h  keyboard.c  main.c  makefile  makefile.in  mouse.c  nonvt100.c  patchlev.h  printer.c  reports.c  reset.c  setup.c  sixel.c  status.c  tek4014.c  ttymodes.c  unix_io.c  vms_io.c  vmsbuild.com  vt220.c  vt320.c  vt420.c  vt52.c  (+5 more)
(+105 files in other folders)
