dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.21 2010/08/26 10:53:17 tom Exp $
AC_REVISION($Revision: 1.21 $)

AC_INIT(esc.c)
AC_CONFIG_HEADER(config.h:config.hin)

CF_CHECK_CACHE

AC_ARG_PROGRAM
AC_PROG_CC
CF_INTEL_COMPILER
CF_PROG_EXT

AC_PROG_INSTALL
CF_MAKE_TAGS

AC_CHECK_PROGS(LINT, lint alint splint lclint, [])
AC_SUBST(LINT)

CF_DISABLE_ECHO
CF_WITH_WARNINGS
CF_XOPEN_SOURCE

###	extra things that we'll substitute in the makefile
AC_TYPE_SIGNAL
AC_STDC_HEADERS
AC_HAVE_HEADERS( \
fcntl.h \
ioctl.h \
sgtty.h \
stdlib.h \
string.h \
sys/filio.h \
sys/ioctl.h \
termio.h \
termios.h \
unistd.h \
)

AC_HAVE_FUNCS( \
alarm \
rdchk \
tcgetattr \
usleep \
)

###	special configuration tests
CF_POSIX_VDISABLE
CF_FCNTL_VS_IOCTL

###	debugging/testing

###	output makefile and config.h
AC_OUTPUT(makefile)
